# rudy-workhorse

./: .env.example  .gitignore  CLAUDE.md  README.md  SOLE-SURVIVOR-PROTOCOL.md  Session-29-Handoff.md  Session-32-Handoff.md  Session-33-Handoff.md  Session-34-Handoff.md  Session-35-Handoff.md  Session-36-Prompt.md  Session-37-Prompt.md  Session-39-Lucius-Analysis.md  Session-39-Prompt.md  Session-41-Handoff.md  Session-42-Handoff.md  Session-43-Handoff.md  Session-45-Handoff.md  Session-50-Handoff.md  Session-51-Handoff.md  Session-52-Handoff.md  TASKS.md  batcave-startup.ps1  bootstrap_robin.py  claude-command-runner-v2.ps1  enforce-rustdesk-config.ps1  oracle-git-ops.py  presence-dashboard.jsx  pyproject.toml  registry.json  requirements.txt  rudy-command-runner.py  rudy-listener.py  setup.py  sprint-github-integration.md  web-intel-2026-03-26.md  web-watcher-run.py  workhorse-healthcheck.ps1
.claude/: mcp.json
docs/: ADR-001-robin-bridge.md  ADR-002-robin-sentinel.md  ADR-003-robin-handoff-protocol.md  ADR-004-lucius-fox-librarian.md  ADR-005-build-vs-buy-gate.md  ADR-006-lucius-upgrade.md  ADR-018-sentinel-learning-loop.md  ALFRED-DIRECTIVES.md  BATCAVE-CLAUDE.md  HANDOFF.md  MANIFEST.txt  MISSION.md  RESEARCH-FEED-INDEX.md  RESEARCH-FEED-README.md  RESEARCH-FEED-SUMMARY.txt  ROBIN-CAPABILITY-MANIFEST.md  SECURITY-LOCKOUT-AUDIT.md  SESSION-HANDOFF.md  WORKHORSE-RECOVERY-CHECKLIST.md  claude-code-toolkit-guide.md  connectors-manifest.md  lucius-registry.md  lucius-self-audit-prompt.md  n8n-mcp-config.json  oracle-capabilities.md  research-feed-integration.md  (+8 more)
(+568 files in other folders)
